# Carrier-Website

./: .replit  README.md  app.py  database.py  pyproject.toml
static/css/: auth.css  base.css  main.css  sidebar.css
static/js/: flash.js
templates/: about_us.html  application_form.html  application_submitted.html  banner.html  bootstrap.html  contact_us.html  faqs.html  footer.html  home.html  jobitems.html  jobpage.html  login.html  navbar.html  services.html  signup.html
templates/admin/: view_applicants.html
templates/auth/: login.html  signup.html
templates/components/: bootstrap.html
templates/layouts/: footer.html
templates/pages/: about_us.html  application_form.html  application_submitted.html  careers.html  contact_us.html  courses.html  error.html  faqs.html  jobpage.html  services.html
templates/pages/courses/: already_enrolled.html  course_details.html  enroll.html
templates/users/: base.html  dashboard.html
templates/users/pages/: billing.html  certificates.html  courses.html  discussions.html  error.html  lessons.html  no_lessons.html  profile.html  progress.html  quiz_page.html  quiz_result.html  quizes.html  settings.html
templates/users/pages/exam/: disqualified.html  question.html  results.html  submitted.html
templates/users/partials/: navbar.html  sidebar.html
