[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
package-mode = false
authors = ["Peter Chikwanda <ptrbrighteraacademy@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
flask = "^2.3"
gunicorn = "^21.2.0"
sqlalchemy = "^2.0"
pymysql = "^1.1"
