[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
authors = ["Peter Chikwanda <ptrbrighteraacademy@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
flask = "^2.3"
gunicorn = "^21.2.0"
sqlalchemy = "^2.0"
pymysql = "^1.1"
flask-login = "^0.6.3"
werkzeug = "^3.1.4"
